--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ d2hoeSB0ICxnaGJtdnR4ayB0IHhsbnR2IGx4ZmJteGZobCB3Z1Q=
         <button id="submit" type="submit">Submit</button>
       </form>
     </div>
-    <div class="background">
-    </div>
+    <div id="background" class="background"></div>
   </div>
   <script src="passwordtoggle.js"></script>
   <script src="validation.js" defer></script>
