Background Change Fix v2

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@ d2hoeSB0ICxnaGJtdnR4ayB0IHhsbnR2IGx4ZmJteGZobCB3Z1Q=
         <button id="submit" type="submit">Submit</button>
       </form>
     </div>
-    <div id="background" class="background"></div>
+    <div id="background" class="background">
+      <div id="bg1" class="bg-layer"></div>
+      <div id="bg2" class="bg-layer"></div>
+    </div>
   </div>
   <script src="passwordtoggle.js"></script>
   <script src="validation.js" defer></script>
