--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>Maracoose</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com; script-src 'self';">
   <link href="style.css" rel="stylesheet" type="text/css">
