Backgrounds Clickable and Fade

--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@ d2hoeSB0ICxnaGJtdnR4ayB0IHhsbnR2IGx4ZmJteGZobCB3Z1Q=
         <button id="submit" type="submit">Submit</button>
       </form>
     </div>
-    <div id="background" class="background">
-      <div id="bg1" class="bg-layer"></div>
-      <div id="bg2" class="bg-layer"></div>
-    </div>
+  <div id="background" class="background">
+    <a id="link1" href="images/Differently.jpg" target="_blank">
+      <img id="bg1" src="images/Differently.jpg" class="bg-layer">
+    </a>
+    <a id="link2" href="images/lookCloser.png" target="_blank">
+      <img id="bg2" src="images/lookCloser.png" class="bg-layer">
+    </a>
+  </div>
   </div>
   <script src="passwordtoggle.js"></script>
   <script src="validation.js" defer></script>
