--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ d2hoeSB0ICxnaGJtdnR4ayB0IHhsbnR2IGx4ZmJteGZobCB3Z1Q=
       </form>
     </div>
   <div id="background" class="background">
-    <a id="link1" href="images/Differently.jpg" target="_blank">
-      <img id="bg1" src="images/Differently.jpg" class="bg-layer">
+    <a id="link1" href="images/Differently.jpg" target="_blank" style="opacity:1;">
+      <img src="images/Differently.jpg" class="bg-layer">
     </a>
-    <a id="link2" href="images/lookCloser.png" target="_blank">
-      <img id="bg2" src="images/lookCloser.png" class="bg-layer">
+    <a id="link2" href="images/lookCloser.png" target="_blank" style="opacity:0;">
+      <img src="images/lookCloser.png" class="bg-layer">
     </a>
   </div>
   </div>
