--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-
 <html>
 <head>
   <meta charset="UTF-8">
   <title>Maracoose</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com; script-src 'self';">
+  <meta http-equiv="Content-Security-Policy" 
+    content="default-src 'self'; 
+             img-src 'self' data: https:; 
+             style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; 
+             font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com; 
+             script-src 'self';">
   <link href="style.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
@@ -35,14 +39,14 @@ d2hoeSB0ICxnaGJtdnR4ayB0IHhsbnR2IGx4ZmJteGZobCB3Z1Q=
         <button id="submit" type="submit">Submit</button>
       </form>
     </div>
-  <div id="background" class="background">
-    <a id="link1" href="images/Differently.jpg" target="_blank" style="opacity:1;">
-      <img src="images/Differently.jpg" class="bg-layer">
-    </a>
-    <a id="link2" href="images/lookCloser.png" target="_blank" style="opacity:0;">
-      <img src="images/lookCloser.png" class="bg-layer">
-    </a>
-  </div>
+    <div id="background" class="background">
+      <a id="link1" href="images/Differently.jpg" target="_blank" style="opacity:1;">
+        <img src="images/Differently.jpg" class="bg-layer">
+      </a>
+      <a id="link2" href="images/lookCloser.png" target="_blank" style="opacity:0;">
+        <img src="images/lookCloser.png" class="bg-layer">
+      </a>
+    </div>
   </div>
   <script src="passwordtoggle.js"></script>
   <script src="validation.js" defer></script>
