--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@ d2hoeSB0ICxnaGJtdnR4ayB0IHhsbnR2IGx4ZmJteGZobCB3Z1Q=
   </div>
   <script src="passwordtoggle.js"></script>
   <script src="validation.js" defer></script>
+  <script src="encryption.js" defer></script>
 </body>
 </html>
