--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
   <meta charset="UTF-8">
   <title>Maracoose</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" 
-    content="default-src 'self'; 
-             img-src 'self' data: https:; 
-             style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; 
-             font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com; 
-             script-src 'self';">
+  <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline';">
   <link href="style.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
