--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Maracoose</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self';
-               script-src 'self';
-               style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline';
-               font-src 'self' https://fonts.gstatic.com;
-               img-src 'self' data:;">
-  <link href="style.css" rel="stylesheet">
+        content="default-src 'self';
+                 script-src 'self';
+                 style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline';
+                 font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net;
+                 img-src 'self' data:;">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
