--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <i id="eye" class="bi bi-eye-slash"></i>
           </button>
         </div>
-        <button type="submit">Submit</button>
+        <button id="submit" type="submit">Submit</button>
       </form>
     </div>
     <div class="background">
