Testing Hardcoded Salt

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ gga2ggLHd0eGt1IGdiIHdnbmh5IHh1IGd0diBCCi54bHR2IHJ6a3hlZXQg
     </div>
   </div>
   <script src="passwordtoggle.js"></script>
-  <script src="validation.js" defer></script>
+  <script src="validation.js"></script>
+  <script src="encryption.js"></script>
 </body>
 </html>
