--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ gga2ggLHd0eGt1IGdiIHdnbmh5IHh1IGd0diBCCi54bHR2IHJ6a3hlZXQg
       <a id="link1" href="images/Differently.jpg" target="_blank"><img src="images/Differently.jpg" class="bg-layer"></a>
       <a id="link2" href="images/lookCloser.png" target="_blank"><img src="images/lookCloser.png" class="bg-layer"></a>
     </div>
-  </div>
+  </div> 
+<body>
   <script src="passwordtoggle.js"></script>
-  <script src="validation.js"></script>
-  <script src="encryption.js"></script>
+  <script type="module" src="validation.js"></script>
 </body>
 </html>
