--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Maracoose</title>
@@ -44,7 +44,7 @@ gga2ggLHd0eGt1IGdiIHdnbmh5IHh1IGd0diBCCi54bHR2IHJ6a3hlZXQg
       <a id="link2" href="images/lookCloser.png" target="_blank"><img src="images/lookCloser.png" class="bg-layer"></a>
       <a id="link3" href="images/quote.png" target="_blank"><img src="images/quote.png" class="bg-layer"></a>
     </div>
-  </div> 
+  </div>
   <script src="passwordtoggle.js"></script>
   <script type="module" src="validation.js"></script>
 </body>
