--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ gga2ggLHd0eGt1IGdiIHdnbmh5IHh1IGd0diBCCi54bHR2IHJ6a3hlZXQg
     <div class="background">
       <a id="link1" href="images/Differently.jpg" target="_blank"><img src="images/Differently.jpg" class="bg-layer"></a>
       <a id="link2" href="images/lookCloser.png" target="_blank"><img src="images/lookCloser.png" class="bg-layer"></a>
-      <a id="link3" href="images/quote.png" target="_blank"><img src="images/quote.png" class="bg-layer"></a>
+      <a id="link3" href="images/listenClosely.png" target="_blank"><img src="images/listenClosely.png" class="bg-layer"></a>
     </div>
   </div>
   <script src="passwordtoggle.js"></script>
