--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ gga2ggLHd0eGt1IGdiIHdnbmh5IHh1IGd0diBCCi54bHR2IHJ6a3hlZXQg
             <i id="eye" class="bi bi-eye-slash"></i>
           </button>
         </div>
-        <button id="submit" type="submit">Submit</button>
+        <div id="submit-container" style="position: relative; display: inline-block;">
+          <button id="submit" type="submit">Submit</button>
+        </div>
       </form>
     </div>
     <div class="background">
